# ACM-Meeting-Records

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: .pylintrc  docker-image.yml  pylint.yml  pytest.yml
app/: .env.example  __init__.py  app.py  extensions.py  forms.py  logger_config.json  models.py  notes.txt  utils.py  web.py
app/blueprints/: admin.py  api.py  auth.py  main.py  mfa.py  polls.py
app/templates/: account.html  code.html  error.html  event.html  events.html  footer.html  header.html  index.html  login.html  sign_up.html  users.html
app/utilities/: db_backup.sh  make_env_credentials.py  new_admin_sql.py  secret_keygen.py  sql_manage_users.py
docs/: CONTRIBUTING.md  DEVELOPMENT.md  quickstart.md  upgrading.md
flask/: utils.py  web.py
flask/templates/: base.html  error.html  event.html  events.html  footer.html  header.html  index.html  login.html  navbar.html
flask/utilities/: secret_keygen.py
github-pages/: base.css  index.html
migrations/versions/: 0e932ca015e3_add_poll_field_for_expiration_datetime.py  1afde95bb778_v1_5_upgrade.py  2ba18391895d_v1_6_upgrade.py  303481549251_immutability.py  3e163497f885_base_v1_4_tables.py  4396405aba8b_private_vote.py  550dac70d51f_added_column_to_track_multi_response_.py  9707706692be_added_voter_id_column_to_pollvoter.py  (+2 more)
tests/: conftest.py  test_forms.py  test_models.py  test_utils.py
(+23 files in other folders)
